CustomObjects/objects/blng__DebitNoteLine__c.object
<CustomObject>
    <fields>
        <fullName>blng__Allocations__c</fullName>
        <label>Allocations</label>
        <summarizedField>blng__DebitNoteAllocation__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__DebitNoteAllocation__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__DebitNoteAllocation__c.blng__DebitNoteLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__AvailableBalance__c</fullName>
        <formula>blng__TotalAmount__c - blng__Allocations__c + blng__Unallocations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__DebitNote__c</fullName>
        <label>Debit Note</label>
        <referenceTo>blng__DebitNote__c</referenceTo>
        <relationshipLabel>Debit Note Lines</relationshipLabel>
        <relationshipName>DebitNoteLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__PaymentBalance__c</fullName>
        <formula>blng__TotalAmount__c - blng__Payments__c + blng__Refunds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Payments1__c</fullName>
        <formula>blng__Payments__c - blng__Refunds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Payments__c</fullName>
        <label>Payment Allocations</label>
        <summarizedField>blng__PaymentAllocationDebitNoteLine__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__PaymentAllocationDebitNoteLine__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__PaymentAllocationDebitNoteLine__c.blng__DebitNoteLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__ProductName__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Debit Note Lines</relationshipLabel>
        <relationshipName>DebitNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Refunds__c</fullName>
        <label>Payment Unallocations</label>
        <summarizedField>blng__PaymentAllocationDebitNoteLine__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__PaymentAllocationDebitNoteLine__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Unallocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__PaymentAllocationDebitNoteLine__c.blng__DebitNoteLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PostingStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TaxAmount__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TotalAmount__c</fullName>
        <label>Total Amount (With Tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Unallocations__c</fullName>
        <label>Unallocations</label>
        <summarizedField>blng__DebitNoteAllocation__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__DebitNoteAllocation__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Unallocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__DebitNoteAllocation__c.blng__DebitNoteLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Debit Note Line</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debit Note Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>